2013-07-23 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (genLeftShift,genRightShift): fixed bug in shifting
	  when result and shift count partially overlapped registers

2013-07-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  src/stm8/gen.c,
	  src/stm8/ralloc2.cc:
	  Implement direct jump from comparison, eliminating temporary; fix operand handling in multiplication.

2013-07-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCglobl.h,
	  src/SDCCmain.c,
	  src/*/ralloc.c,
	  src/SDCCopt.c,
	  src/SDCCast.c,
	  doc/sdccman.lyx:
	  Reorganize debug output options.

2013-07-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  More efficient zeroing and comparing.

2013-07-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/gen.c,
	  src/stm8/ralloc2.cc:
	  Efficient pushes.

2013-07-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/gen.c:
	  More efficient long and long long shifts by small contants.

2013-07-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/gen.c,
	  support/regression/tests/compare.c:
	  Fix handling of comparisons to immediates for stm8.

2013-07-18 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/_mullong.c:
	  Use 16x16 multiplication instead of 8x8 where faster; patch #133 by Marco Bodrato.

2013-07-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClrange.c,
	  support/regression/tests/bug-2197.c:
	  Fix handling of pointer write in live-range splitting, fixing bug #2197.

2013-07-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc.c,
	  src/z80/ralloc2.cc,
	  support/regression/tests/bug-2195.c,
	  src/hc08/ralloc.c,
	  src/hc08/ralloc2.cc:
	  Unify handling of register survival in old and new register allocator, fixing bug #2195.

2013-07-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/compact-results.py,